--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -33,7 +33,8 @@ body {
 .modal {
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: var(--bg);
+  color: var(--text);
 
   top: 105px;
 
