--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -51,3 +51,29 @@ body {
     text-wrap: balance;
   }
 }
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
+
+.circle {
+  position: absolute;
+  background-color: var(--bg);
+  border-radius: 50%;
+  animation: move linear infinite;
+  z-index: -1000;
+}
+
+@keyframes move {
+  0% {
+    transform: translateY(0) translateX(0);
+  }
+  100% {
+    transform: translateY(-100vh) translateX(50vw);
+  }
+}
