--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -16,6 +16,11 @@
       }
     }
   }
+  &__btn {
+    &-item {
+      background-color: var(--bg);
+    }
+  }
 
   &__carousel {
     max-width: 410px;
