--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -49,7 +49,7 @@ select {
   width: 300px;
   padding: 10px;
   background: var(--bg);
-  color: var(--bg-sec);
+  color: var(--text);
   border-radius: 0.25em;
   box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
@@ -61,7 +61,8 @@ select {
   }
   option {
     color: inherit;
-    background-color: var(--text);
+    color: var(--text);
+    background-color: var(--bg);
   }
 }
 
