--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -48,7 +48,7 @@ select {
   outline: 0;
   width: 300px;
   padding: 10px;
-  background: var(--bg);
+  background: var(--bg-sec);
   color: var(--text);
   border-radius: 0.25em;
   box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
